--- a/Stage11/index.html
+++ b/Stage11/index.html
@@ -24,35 +24,35 @@
 			</ul>
 		</nav>
 		<div class="home-pic">
-			<img src="home-pic.jpg" alt="雪国列车">
+			<img src="img/home-pic.jpg" alt="雪国列车">
 		</div>
 		<div class="tag">
 			<ul>
-				<li><img src="tag.png" alt=""><p>标签</p></li>
-				<li><img src="tag.png" alt=""><p>标签</p></li>
-				<li><img src="tag.png" alt=""><p>标签</p></li>
-				<li><img src="tag.png" alt=""><p>标签</p></li>
-				<li><img src="tag.png" alt=""><p>标签</p></li>
+				<li><img src="img/tag.png" alt=""><p>标签</p></li>
+				<li><img src="img/tag.png" alt=""><p>标签</p></li>
+				<li><img src="img/tag.png" alt=""><p>标签</p></li>
+				<li><img src="img/tag.png" alt=""><p>标签</p></li>
+				<li><img src="img/tag.png" alt=""><p>标签</p></li>
 			</ul>
 		</div>
 		<div class="column">
 			<div class="column1">
 				<figure>
-					<img src="bear-column-1.png" alt="">
+					<img src="img/bear-column-1.png" alt="">
 				</figure>
 				<h2>分栏一</h2>
 				<h3>分栏小标题</h3>
 			</div>
 			<div class="column2">
 				<figure>
-					<img src="bear-column-2.png" alt="">
+					<img src="img/bear-column-2.png" alt="">
 				</figure>				
 				<h2>分栏二</h2>
 				<h3>分栏小标题</h3>
 			</div>
 			<div class="column3">
 				<figure>
-					<img src="bear-column-3.png" alt="">
+					<img src="img/bear-column-3.png" alt="">
 				</figure>
 				<h2>分栏三</h2>
 				<h3>分栏小标题</h3>
@@ -62,7 +62,7 @@
 			<h2>模块一</h2>
 			<div class="son-module">
 				<div class="icon">
-					<img src="bear-column-1.png">
+					<img src="img/bear-column-1.png">
 				</div>
 				<ul class="text">
 					<li>这是文案</li>
@@ -71,7 +71,7 @@
 					<li>这是文案</li>
 				</ul>
                 <div class="icon">
-					<img src="bear-column-1.png">
+					<img src="img/bear-column-1.png">
 				</div>
 				<ul class="text">
 					<li>这是文案</li>
@@ -81,11 +81,11 @@
 				</ul>
 			</div>
 		</div>
-		<div class="module2">
+		<div class="module1">
 			<h2>模块二</h2>
 			<div class="son-module">
 				<div class="icon">
-					<img src="bear-column-1.png">
+					<img src="img/bear-column-1.png">
 				</div>
 				<ul class="text">
 					<li>这是文案</li>
@@ -94,7 +94,7 @@
 					<li>这是文案</li>
 				</ul>
                 <div class="icon">
-					<img src="bear-column-1.png">
+					<img src="img/bear-column-1.png">
 				</div>
 				<ul class="text">
 					<li>这是文案</li>
@@ -105,30 +105,22 @@
 			</div>
 		</div>
 		<div class="article1">
-			<img src="kobe.jpg" alt="">	
+			<img src="img/kobe.jpg" alt="">	
 			<div class="art1">
 				<h3>这是一个字号为22的标题</h3>	
 				<p>文章来源 6分钟前</p>
 			</div>
 		</div>
 		<div class="article1">
-			<img src="kobe.jpg" alt="">	
+			<img src="img/kobe.jpg" alt="">	
 			<div class="art2">
 				<h3>这是一个字号为22的标题</h3>	
 				<p>文章来源 6分钟前</p> 
 			</div>	
 		</div>
-		<!-- 	<div class="art">
-				<div class="art2">
-					<img src="kobe.jpg" alt="">	
-					<h3>这是一个字号为22的标题</h3>	
-					<p>文章来源 6分钟前</p> 				
-				</div>	
-			</div> -->
-	
 		<div class="article2">
 			<h3>这是一个字号为22的标题</h3>	
-			<img src="kobe.jpg" alt=""><img src="kobe.jpg" alt=""><img src="kobe.jpg" alt="">
+			<img src="img/kobe.jpg" alt=""><img src="img/kobe.jpg" alt=""><img src="img/kobe.jpg" alt="">
 			<p>文章来源 6分钟前</p>	
 		</div>
 	</div>
