--- a/Stage8/index8.html
+++ b/Stage8/index8.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
 	<title>task8</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<!--任务要点：
+	利用媒体查询@media以及calc计算宽度（其实也可以用box-sizing）
+	类Bootstrap的12列布局-->
 	<div class="wrapper">
 		<div class="row1">
 			<div class="col col-md-4"></div>
