--- a/Stage9/index.html
+++ b/Stage9/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
 	<title>task9</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!--接触一个较为复杂的页面布局，我挑了其中比较难的来做，虽然看起来内容不多，但CSS代码量已经非常可观
+	看来在精简和重构方面还得好好努力啊，目前做得还不好-->
 	<header>
 		<div class="top-logo">
 			<img src="img/logo.png">
@@ -94,7 +96,6 @@
 				<button>搜索</button>
 				<div class="time-check"></div>
 			</div>
-			<div class="count"></div>
 			<div class="calendar">
 				<h3 class="title">日历</h3>
 				<div class="select-time">
@@ -292,9 +293,9 @@
 					</div>
 					<div class="button">
 						<label>
-							<input type="checkbox" checked><span>遵守保密协议</span>
-							<button><span>搜索</span></button>
+							<input type="checkbox" checked><span>遵守保密协议</span>						
 						</label>
+							<button><span>搜索</span></button>
 					</div>
 				</div>
 			</div>
