--- a/Stage10/index.html
+++ b/Stage10/index.html
@@ -11,7 +11,6 @@
 				align-items: center;
 				justify-content: space-between;
 			}
-			
 		}
 		
 		@media screen and (max-width: 640px){
@@ -20,30 +19,18 @@
 				align-items: flex-start;
 				justify-content: space-between;
 				flex-flow: row wrap;
-
-			}
-				
+			}				
 			.son4{
 				order: 1;
 				margin-bottom: 20px;
 			}	
-
-			.son1{
-				order: 2;
-			}
-
-			.son2{
-				order: 3;
-			}
-
-			.son3{
-				order: 3;
-			}
+			.son1{ order: 2; }
+			.son2{ order: 3; }
+			.son3{ order: 4; }
 
 		}
 
 		.parent{
-			width: 80%;
 			margin: 0 auto;
 			border: 1px solid;
 			padding: 20px;
@@ -75,6 +62,7 @@
 	</style>
 </head>
 <body>
+	<!--接触flexbox布局，结合媒体查询达到响应式布局的效果-->
 	<div class="parent">
 		<div class="son1"></div>
 		<div class="son2"></div>
