--- a/Stage4/index4.html
+++ b/Stage4/index4.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>task104</title>
 	<style type="text/css">
 
 		.mainbody{
@@ -14,7 +14,8 @@
  			position: absolute;  
  			top: 0; left: 0; bottom: 0; right: 0;  
 
- 			/*position:absolute;
+ 			/*也可以用另一种：
+ 			position:absolute;
 			top:50%;
 			left: 50%;
 			margin:-100px 0 0 -200px; */
@@ -42,7 +43,6 @@
 </head>
 <body>
 	<div class="mainbody">
-		<!-- <p>你好啊我是来自广东工业大学</p> -->
 		<div class="circle1">
 		</div>
 		<div class="circle2"></div>
