--- a/Stage5/test101.html
+++ b/Stage5/test101.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>Baidu test101</title>	
+	<title>Baidu test105</title>	
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
