--- a/Stage7/index7.html
+++ b/Stage7/index7.html
@@ -22,7 +22,7 @@
 			</ul>
 		</nav>
 	</header>
-	<article>
+	<div class="main">
 		<section class="new-life">
 			<div class="start">
 				<img src="backpic1.jpg">
@@ -58,32 +58,146 @@
 				<p>关于新世界，你不知道的还有什么？</p>
 			</div>
 			<div class="find-aci">
-				<p>查找新世界城市活动信息</p>
-				<p>——</p>
-				<p>每个城市都有不同的活动信息，请自主查询您所要了解的城市</p>
-				<div class="select">
-					<select name="country">
-						<option value="1" selected>中国</option>
-						<option value="2">外国</option>
-					</select>
-					<select name="province" value="省份">	
-						<option>北京</option>	
-						<option>上海</option>	
-						<option>广东</option>	
-						<option>江苏</option>	
-						<option>西藏</option>
-					</select>
-					<select name="city">
-						<option>北京</option>
-					</select>
-					<button>搜索</button>
+				<img src="map.png">
+				<div class="find-text">
+					<p>查找新世界城市活动信息</p>
+					<p>——</p>
+					<p>每个城市都有不同的活动信息，请自主查询您所要了解的城市</p>
+					<div class="select">
+						<select name="country" placeholder="外国">
+							<option value="1" >中国</option>
+							<option value="2">外国</option>
+						</select>
+						<select name="province" value="省份">	
+							<option>北京</option>	
+							<option>上海</option>	
+							<option>广东</option>	
+							<option>江苏</option>	
+							<option>西藏</option>
+						</select>
+						<select name="city">
+							<option>北京</option>
+						</select>
+						<button>搜索</button>
+					</div>
 				</div>
 			</div>
-			<div class="city"></div>
+			<div class="city">
+				<div class="allcity">
+					<div class="beijing">
+						<img src="pic3.jpg">
+						<p>北京活动</p>
+						<p>新社区大联盟</p>
+					</div>
+					<div class="shanghai">
+						<p>上海活动</p>
+						<p>夜上海新景观探索</p>
+						<img src="pic4.jpg">
+					</div>
+					<div class="shenzhen">
+						<img src="pic5.jpg">
+						<p>深圳活动</p>
+						<p>全新海岸线观点站</p>
+					</div>
+					<div class="hongkong">
+						<img src="pic6.jpg">
+						<p>香港活动</p>
+						<p>奢侈消费大派送</p>
+					</div>
+				</div>
+				<div style="clear: both;"></div>
+			</div>
 		</section>
-		<section class="read-more"></section>
-		<section class="join-us"></section>
-	</article>
-	<footer></footer>
+		<section class="read-more">
+			<div class="more-top">
+				<div class="top-left">
+					<img src="pic7.jpg">
+					<div class="text">
+						<p>新世界</p>	
+						<p>TIME</p>
+						<p>@新世界 - 北京</p>
+						<p>2016.04.01</p>
+					</div>
+					<div class="triangle1"></div>
+				</div>
+				<div class="top-right">
+					<div class="right-text">
+						<p>新世界 / <span>01</span></p>
+						<p>新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界新世界</p>
+					</div>
+					<button>更多详情</button>
+				</div>
+			</div>
+			<div class="more-bottom">
+				<div class="bottom-left">
+					<p>新时代</p>
+					<p>关于爱生活的我们</p>
+					<p>——</p>
+					<button>查看更多</button>
+				</div>
+				<div class="bottom-center">
+					<p>新时代</p>
+					<p>关于爱生活的我们</p>
+					<p>——</p>
+					<button>查看更多</button>
+				</div>
+				<div class="bottom-right">
+					<img src="pic8.jpg">
+				</div>
+			</div>
+		</section>
+		<section class="join-us">
+			<div class="join-top">
+				<p>成为我们的志愿者</p>
+				<p>——</p>
+				<p>新世界的大家庭需要每一个爱生活的人，如果你够年轻，有梦想，有激情那就不要犹豫，快来加入我们，成为改变所有人生活的人</p>
+			</div>
+			<div class="join-bottom">
+				<div class="join-bottom-left">
+					<div class="left1">
+						<p>新世界志愿者协议</p>
+						<p>加入新世界的志愿者的人员必须遵守中华人民共和国的相关法律，并且本着平等资源的原则......</p>
+						<button>more</button>
+					</div>
+					<div class="left2">
+						<p>新世界志愿者权利</p>
+						<p>新世界志愿者享受新世界内部所有资源共享的权利，并且享受所在新世界活动的优势参与资格</p>
+						<button>more</button>
+					</div>
+					<div class="left3">
+						<p>更多条款</p>
+					</div>
+				</div>
+				<div class="join-bottom-right">
+					<textarea class="text1" placeholder="姓名："   cellspacing="0"></textarea>
+					<textarea class="text2" placeholder="年龄："></textarea>
+					<textarea class="text3" placeholder="联系方式："></textarea>
+					<textarea class="text4" placeholder="联系地址："></textarea>
+					<textarea class="text5" placeholder="请简单描述您梦想的生活："></textarea>
+					<button>提交申请</button>
+				</div>
+			</div>
+		</section>
+	</div>
+	<footer>
+		<div class="footer-top">
+			<div class="text-wrapper">
+				<p>联系我们</p>
+				<p>为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯也可以通过以下任何方式关注我们动态</p>			
+				<input type="text" placeholder="Someone@email.com"></input><button>提交</button>
+
+				<div class="link-us">
+					<a href="#"><img src="qq.png"></a>
+					<a href="#"><img src="weibo.png"></a>
+					<a href="#"><img src="tuite.png"></a>
+					<a href="#"><img src="world.png"></a>
+				</div>
+			</div>
+		</div>
+		<div class="footer-bottom">
+			<span>&copy;2016 新世界</span>
+			<a href="#">Back to top</a>
+		</div>
+	</footer>
 </body>
 </html>
