增加README与注释

--- a/Stage11/index.html
+++ b/Stage11/index.html
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+	<!-- 默认优先使用Chrome，否则使用IE最新版引擎渲染 -->
 	<meta name="apple-mobile-web-app-capable" content="yes" >
+	<!-- iPhone全屏 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
-	<title>task11</title>
+	<!-- 使用viewport元标签，初始缩放比为1，最大缩放比为1，禁止用户缩放 -->
+	<title>task111</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
