新增README，些许代码修改

--- a/Stage16/Stage16.html
+++ b/Stage16/Stage16.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>task16</title>
-
+	<title>task216</title>
 </head>
 <body>
   <div>
@@ -12,7 +11,6 @@
     <button id="add-btn">确认添加</button>
   </div>
   <table id="aqi-table">
-  
   </table>
 <script src="task.js"></script>
 </body>
