--- a/Stage20/Stage20.html
+++ b/Stage20/Stage20.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>task18</title>
+	<title>task220</title>
 	<style>
 		ul>li{
 			display: inline-block;
 			margin: 15px;
+			padding: 10px;
 			color: #eee;
 			background-color: #3F51B5; 
 		}
