--- a/Stage21/Stage21.html
+++ b/Stage21/Stage21.html
@@ -20,10 +20,10 @@
 
 <body>
 	<span>Tag:</span>
-	<input type="text" id="inputnum">
+	<input type="text" id="inputnum" placeholder="回车确定输入">
 	<ul></ul>
 	<span>Tag:</span>
-	<input type="text" id="inputnum1">
+	<input type="text" id="inputnum1" placeholder="回车确定输入">
 	<ul></ul>
 	<textarea name="loves" id="hobbies" cols="30" rows="5"></textarea>
 	<input type="submit" value="提交兴趣爱好" id="comfirm">
