--- a/Stage14/Stage14-1.html
+++ b/Stage14/Stage14-1.html
@@ -31,22 +31,23 @@ var aqiData = [
   遍历读取aqiData中各个城市的数据
   将空气质量指数大于60的城市显示到aqi-list的列表中
   */
-  function compare(a,b){
-    return a[1]-b[1];
-  }
-  aqiData.sort(compare);
-
-  var c = 1;
-  for (var i = aqiData.length - 1; i >= 0; i--) {    
-    if (aqiData[i][1] > 60) {
-          
-          var lili = document.createElement("li");
-          var ulul = document.getElementById("aqi-list");
-          lili.innerHTML = "第"+ c +"名"+" "+aqiData[i][0]+" "+aqiData[i][1];
-          ulul.appendChild(lili);
-          c=c+1; 
+    function compare(a,b){
+      return a[1]-b[1];
+      //经典的对比函数，用于 sort()
     }
-  }
+
+    aqiData.sort(compare);
+
+    var c = 1;
+    for (var i = aqiData.length - 1; i >= 0; i--) {    
+      if (aqiData[i][1] > 60) {
+            var li = document.createElement("li");
+            var ul = document.getElementById("aqi-list");
+            li.innerHTML = "第"+ c +"名"+" "+aqiData[i][0]+" "+aqiData[i][1];
+            ul.appendChild(li);
+            c++; 
+      }
+    }
 
 })();
 
