--- a/Stage15/index15.html
+++ b/Stage15/index15.html
@@ -1,9 +1,9 @@
 <!DOCTYPE>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
-  </head>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>task215</title>
+</head>
 <body>
 
   <ul id="source">
@@ -27,69 +27,59 @@
   <button id="sort-btn">排序</button>
 
 <script type="text/javascript">
-
-  function btnHandle() {
-    var aqiData = getData();
-    aqiData = sortAqiData(aqiData);
-    render(aqiData);
-  }
-
-
-  function getData(){
-    /**
- * getData方法
- * 读取id为source的列表，获取其中城市名字及城市对应的空气质量
- * 返回一个数组，格式见函数中示例
- */
-    var data = [];
-    var lili = document.getElementsByTagName("li");
-    var num = document.getElementsByTagName("b");
-
-    for (var i = 0; i <=lili.length - 1; i++) {
-      var city = lili[i].innerHTML.substring(0,2);
-      var count = num[i].innerHTML;
-      data.push([city,count]);
+    var li = document.getElementsByTagName("li");
+    function btnHandle() {
+      var aqiData = getData(); //获取数组
+      aqiData = sortAqiData(aqiData); //sort数组
+      render(aqiData);  //渲染网页
     }
-    return data;
-  }
 
+    function getData(){
+      /**
+      * getData方法
+      * 读取id为source的列表，获取其中城市名字及城市对应的空气质量
+      * 返回一个数组，格式见函数中示例
+      */
+      var data = [];
+      var num = document.getElementsByTagName("b");
 
-/**
- * sortAqiData
- * 按空气质量对data进行从小到大的排序
- * 返回一个排序后的数组
- */
-function sortAqiData(data) {
-    data.sort(function(a,b){
-      return a[1]-b[1];
-    })
-    return data;
-}
+      for (var i = 0; i <=li.length - 1; i++) {
+        var city = li[i].innerHTML.substring(0,2);
+        var count = num[i].innerHTML;
+        data.push([city,count]);
+        //用栈方法直接把第二维的数组push进去
+      }
+      return data;
+    }
 
-/**
- * render
- * 将排好序的城市及空气质量指数，输出显示到id位resort的列表中
- * 格式见ul中的注释的部分
- */
-function render(data) {
+    /**
+     * sortAqiData
+     * 按空气质量对data进行从小到大的排序
+     * 返回一个排序后的数组
+     */
+    function sortAqiData(data) {
+        data.sort(function(a,b){
+          return a[1]-b[1];
+        })
+        return data;
+    }
 
-  var li = document.getElementsByTagName("li");
-  for (var i = 0; i <= data.length - 1; i++) {
-    li[i].innerHTML = "第"+ (i+1) +"名"+"："+data[i][0]+"空气质量："+"<b>"+data[i][1]+"</b>";
-  }
-  
-}
+    /**
+     * render
+     * 将排好序的城市及空气质量指数，输出显示到id位resort的列表中
+     * 格式见ul中的注释的部分
+     */
+    function render(data) {
+      for (var i = 0; i <= data.length - 1; i++) {
+        li[i].innerHTML = "第"+ (i+1) +"名"+"："+data[i][0]+"空气质量："+"<b>"+data[i][1]+"</b>";
+      }
+      
+    }
 
-
-
-
-
-function init() {
-
-  document.getElementById("sort-btn").onclick = btnHandle;
-  // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
-
-}
+    function init() {
+      document.getElementById("sort-btn").onclick = btnHandle;
+      // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
+    }
 
 init();
 
