桌面端网站首页布局

--- a/Stage7/index7.html
+++ b/Stage7/index7.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<div class="logo1">
-			<img src="logo.png">
+			<img src="img/logo.png">
 			<span>新世界</span>
 		</div>
 		<nav>
@@ -25,7 +25,7 @@
 	<div class="main">
 		<section class="new-life">
 			<div class="start">
-				<img src="backpic1.jpg">
+				<img src="img/backpic1.jpg">
 				<div class="start-text">
 					<p>Time of new life</p>
 					<p>新时代，年轻的人们让我们一起</p>
@@ -35,30 +35,30 @@
 			</div>
 			<div class="detail">
 				<div class="detail1">
-					<img src="circle.png">
+					<img src="img/circle.png">
 					<p>打造全新世界观，让你更爱你的生活</p>
 				</div>
 				<div class="detail2">
-					<img src="flag.png">
+					<img src="img/flag.png">
 					<p>丰富多彩的公益活动，发挥新世界的主人公意识</p>
 				</div>
 				<div class="detail3">
-					<img src="flower.png">
+					<img src="img/flower.png">
 					<p>时尚的新理念，超前体验未知的生活</p>
 				</div>
 				<div class="detail4">
-					<img src="block.png">
+					<img src="img/block.png">
 					<p>完善的培训机制，培养你全新的世界观</p>
 				</div>
 			</div>
 		</section>
 		<section class="activity">
 			<div class="intro">
-				<img src="logo.png">
+				<img src="img/logo.png">
 				<p>关于新世界，你不知道的还有什么？</p>
 			</div>
 			<div class="find-aci">
-				<img src="map.png">
+				<img src="img/map.png">
 				<div class="find-text">
 					<p>查找新世界城市活动信息</p>
 					<p>——</p>
@@ -85,22 +85,22 @@
 			<div class="city">
 				<div class="allcity">
 					<div class="beijing">
-						<img src="pic3.jpg">
+						<img src="img/pic3.jpg">
 						<p>北京活动</p>
 						<p>新社区大联盟</p>
 					</div>
 					<div class="shanghai">
 						<p>上海活动</p>
 						<p>夜上海新景观探索</p>
-						<img src="pic4.jpg">
+						<img src="img/pic4.jpg">
 					</div>
 					<div class="shenzhen">
-						<img src="pic5.jpg">
+						<img src="img/pic5.jpg">
 						<p>深圳活动</p>
 						<p>全新海岸线观点站</p>
 					</div>
 					<div class="hongkong">
-						<img src="pic6.jpg">
+						<img src="img/pic6.jpg">
 						<p>香港活动</p>
 						<p>奢侈消费大派送</p>
 					</div>
@@ -111,7 +111,7 @@
 		<section class="read-more">
 			<div class="more-top">
 				<div class="top-left">
-					<img src="pic7.jpg">
+					<img src="img/pic7.jpg">
 					<div class="text">
 						<p>新世界</p>	
 						<p>TIME</p>
@@ -142,7 +142,7 @@
 					<button>查看更多</button>
 				</div>
 				<div class="bottom-right">
-					<img src="pic8.jpg">
+					<img src="img/pic8.jpg">
 				</div>
 			</div>
 		</section>
@@ -187,10 +187,10 @@
 				<input type="text" placeholder="Someone@email.com"></input><button>提交</button>
 
 				<div class="link-us">
-					<a href="#"><img src="qq.png"></a>
-					<a href="#"><img src="weibo.png"></a>
-					<a href="#"><img src="tuite.png"></a>
-					<a href="#"><img src="world.png"></a>
+					<a href="#"><img src="img/qq.png"></a>
+					<a href="#"><img src="img/weibo.png"></a>
+					<a href="#"><img src="img/tuite.png"></a>
+					<a href="#"><img src="img/world.png"></a>
 				</div>
 			</div>
 		</div>
